Fixed alignment in beneficios.ejs section.

--- a/css/_globals.scss
+++ b/css/_globals.scss
@@ -247,3 +247,9 @@ img {
   background-color: colors.$scorpio-green-05;
   color: colors.$white;
 }
+
+@include media-breakpoint-down(xs) {
+  .text-center-xs {
+    text-align: center;
+  }
+}
